--- a/package.json
+++ b/package.json
@@ -49,5 +49,27 @@
 		"rxjs-compat": "6.6.3",
 		"short-uuid": "4.2.0",
 		"throttle-debounce": "3.0.1"
-  }
+  },
+	"devDependencies": {
+		"@testing-library/react": "12.1.2",
+		"@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
+		"enzyme": "3.11.0",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"jest": "26.6.0",
+		"jest-silent-reporter": "0.5.0",
+		"prettier": "2.1.2",
+		"redux-mock-store": "1.5.4"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
